2005-09-01  Philippe Elie  <phil.el@wanadoo.fr>

	* gui/oprof_start.cpp: the last unit mask checkbox is no longer a
	  "validate all unit mask" so don't treat it specially. It avoid to
	  lost the last bit in the unit mask each time oprof_start is used.

2005-08-31  Philippe Elie  <phil.el@wanadoo.fr>

	* doc/oprofile.1.in: quote .BR strings

2005-08-31  John Levon  <levon@movementarian.org>

	* doc/oprofile.1.in: document archive: specifier

2005-08-30  Philippe Elie  <phil.el@wanadoo.fr>

	* pp/oparchive_options.cpp: fix #1276058, oparchive must force merging
	  to avoid trigerring some sanity check in arrange_profiles(). Allowing
	  merging is not a problem as merging doesn't occur in oparchive.

2005-08-25  Philippe Elie  <phil.el@wanadoo.fr>

	* events/x86-64/hammer/unit_masks:
	* events/x86-64/hammer/events: new events to count data cache
	  access/miss by lock'ed insn.

2005-08-24  Maynard Johnson <maynardj@us.ibm.com>

	* events/ppc64/power4/events:
	* events/ppc64/power4/event_mappings:
	* events/ppc64/power5/events:
	* events/ppc64/power5/event_mappings:
	* events/ppc64/970/events:
	* events/ppc64/970/event_mappings: Add all supported events and groups.
	  This change some events name.

2005-08-24  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/op_bfd.cpp: minor tidy
	* daemon/opd_trans.c: more static function
	* events/ppc/e500/events: typo

2005-08-19  Philippe Elie  <phil.el@wanadoo.fr>

	* libdb/db_stat.c: use 64 bits to cumulate samples count.

2005-08-18  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/file_manip.cpp: Change the last modification time after
	  copying it.

2005-08-17  Philippe Elie  <phil.el@wanadoo.fr>

	* libdb/odb.h:
	* libdb/db_manage.c:
	* libdb/db_insert.c: split the api in two part, one to update a node
	  (or create it) by incrementing by one its associated value and
	  one to create a new node with a given value. This optimize the
	  fast path used by the daemon. Sanity check inside the fast path has