@@ -1,3 +1,11 @@
+2005-09-08  Philippe Elie  <phil.el@wanadoo.fr>
+
+	* libop/op_events.c:
+	* libop/op_events.h:
+	* libpp/op_header.cpp: use 32 bits unsigned int for unit mask, u16
+	  use was an historical artefact coming from the p6 implementation.
+	  This allow to pass more information and will be used by P4 driver.
+
 2005-09-01  Philippe Elie  <phil.el@wanadoo.fr>
 
 	* gui/oprof_start.cpp: the last unit mask checkbox is no longer a
